--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave {
+  0%,
+  100% {
+    transform: rotate(0)
+  }
+  20%,
+  60% {
+    transform: rotate(-25deg)
+  }
+  40%,
+  80% {
+    transform: rotate(10deg)
+  }
+}
+
+@media (max-width:500px) {
+  .github-corner:hover .octo-arm {
+    animation: none
+  }
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
+  }
+}
+
 @font-face {
   font-family: 'RobotoNormal';
   src: url('./assets/fonts/Roboto-Regular-webfont.eot');
